--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -26,3 +26,9 @@ body {
   background: image_url('concrete_seamless.png');
   box-shadow: 0px 1px 3px #2a2a2a;
 }
+
+.navbar-inverse .navbar-brand {
+  color:#4B4F52;
+  font-family: 'chunkfive_printregular', sans-serif;
+  font-size: 26px;
+}
