--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -39,3 +39,10 @@ body {
   font-family: 'chunkfive_printregular', sans-serif;
   font-size: 15px;
 }
+
+.invalid-feedback {
+  color:#ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding: 2px 8px 2px 8px;
+}
