--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -6,7 +6,6 @@
 
   <% if @place.latitude.present? && @place.longitude.present? %>
   <script>
-
     function initMap() {
       var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
 
@@ -18,13 +17,13 @@
       var marker = new google.maps.Marker({
         position: myLatLng,
         map: map,
-        title: 'Hello World!'
-      });
+        title: 'Hello World!'});
     }
   </script>
 
   <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4j7HyqQpSBJpYhToQZcLdqA14_ow5KhM&callback=initMap">
+  src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_API_KEY&callback=initMap">
+
   </script>
   <div id="map"></div>
   <% end %>
@@ -34,5 +33,6 @@
     <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
     <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
     <% end %>
+    
   </div>
 </div>
