--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,41 +1,28 @@
-<div class="booyah-box col-10 offset-1">
-  <h1><%= @place.name %></h1>
-  <i><%= @place.address %></i>
-  <br/><br/>
-  <p><%= @place.description %></p>
-
-  <% if @place.latitude.present? && @place.longitude.present? %>
-  <script>
-    function initMap() {
-      var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
-
-      var map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 12,
-        center: myLatLng
-      });
-
-      var marker = new google.maps.Marker({
-        position: myLatLng,
-        map: map,
-        title: 'Hello World!'});
-    }
-  </script>
-
-  <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=<%=@GOOGLE_API_KEY%>&callback=initMap">
-
-  </script>
-  <div id="map"></div>
-  <% end %>
-<br />
-  <div class="float-right">
-    <% if current_user && current_user == @place.user %>
-    <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
-    <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
-    <% end %>
-    
+<div class="container-fluid">
+  <div class="row">
+    <div class="booyah-box col-10 offset-1">
+     <div class="row">
+       <div class="col-10 offset-1">
+          <%= render :partial => 'details' %>
+       </div>
+     </div>
+     <div class="row">
+        <div class="col-10 offset-1">
+          &nbsp;
+        </div>
+      </div>
+     <div class="row">
+        <div class="col-10 offset-1">
+          <%= render :partial => 'editbuttons' %>
+        </div>
+      </div>
+      
+    </div>
   </div>
+  
 </div>
+
+
 <div class="clear"></div>
 
 
@@ -70,14 +57,10 @@
 </button>
 </div>
 <div class="clear"></div>
+<div class="row">
 <% @place.comments.each do |comment| %>
-  <div>
-    <blockquote>
-      <% if comment.humanized_rating.present? %>
-      <b><%= comment.humanized_rating %></b> -
-      <% end %>
-        <%= comment.message %>
-        <small><%= comment.user.email %></small>
-    </blockquote>
+  <div class="col-12 col-sm-6">
+  <%= render :partial => 'comment', :locals => {:comment => comment} %>
   </div>
   <% end %>
+</div>
