URL displaying on index instead of image

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -18,6 +18,11 @@
     </blockquote>
   </div>
 <% end %>
+
+<% if place.photos.present? %>
+  <b><%= place.photos.last.picture %></b> -
+  <%= place.photos.last.caption %>
+  <% end %>
   </div>
 <% end %> 
 <%= paginate @places %>
