--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -55,6 +55,9 @@
 <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
   Add a comment
 </button>
+<button type="button" class="btn btn-primary btn-lg offset-6" data-toggle="modal" data-target="#photoModal">
+  Add a Photo
+</button>
 </div>
 <div class="clear"></div>
 <div class="row">
@@ -65,19 +68,41 @@
   <% end %>
 
 </div>
+
+
+  <!-- Modal -->
+<div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title" id="photoModalLabel">Add a Photo</h4>
+        </div>
 <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+<div class="modal-body">
   <%= f.input :caption %>
   <%= f.input :picture %>
+   </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
   <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
+</div>
 <% end %>
-<% @place.photos.each do |photo| %>
+</div>
+  </div>
+</div>
+<!-- Button trigger modal -->
+</div>
+<div class="clear"></div>
+<div class="row">
+  <% @place.photos.each do |photo| %>
   <div class="col-12 col-sm-6">
    <div>
-    <%= image_tag photo.picture %>
+    <%= image_tag photo.picture.url %>
     <blockquote>
-        <%= photo.message %>
-        <small><%= comment.user.email %></small>
-    </blockquote>
-  </div>
+        <%= photo.caption %>
+        </blockquote>    
   </div>
   <% end %>
