--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,13 +6,21 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <img class="d-block img-fluid" src="..." alt="First slide">
+      <%= image_tag 'slider1.jpg', class: 'd-block img-fluid' %>
+    <div class="carousel-caption d-none d-md-block">
+    <h3>Find the best pizza places</h3>
+  </div>
+</div>
+    <div class="carousel-item">
+      <%= image_tag 'slider2.jpg', class: 'd-block img-fluid' %>
+      <div class="carousel-caption d-none d-md-block">
+      <h3>The best food selections</h3>
+    </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="..." alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block img-fluid" src="..." alt="Third slide">
+      <%= image_tag 'slider3.jpg', class: 'd-block img-fluid' %>
+      <div class="carousel-caption d-none d-md-block">
+      <h3>Looking for authentic chinese food?</h3>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
